--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.2.10"
   },
   "type": "module"
 }
